--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header.sticky {
 
 /* image banners */
 section.banners {
-    background: url(image/banner-web.png) no-repeat center;
+    background: url(image/Banner.jpg) no-repeat center;
     height: 100vh;
     background-size: cover;
     position: relative;
@@ -109,7 +109,7 @@ section.banners::after {
     right: 0;
     top: 0;
     background-color: #000;
-     opacity: .5;
+     opacity: .6;
      z-index: -1;
 }
 section.banners .container {
