--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ header.sticky {
 
 /* image banners */
 section.banners {
-    background-image: url(Image/banner11.jpg);
+    background-image: url(Image/image\ profil.jpg);
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
@@ -112,7 +112,7 @@ section.banners::after {
     right: 0;
     top: 0;
     background-color: #1F1D36;
-     opacity: .7;
+     opacity: .9;
      z-index: -1;
 }
 section.banners .container {
@@ -151,7 +151,7 @@ section.banners .banners-content .teks-3{
 section.banners .banners-content .teks-3 span{
     font-size: 40px;
     font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     color: #DA0037;
 }
 section.banners .banners-content form input[name="buttonCV"] {
@@ -244,15 +244,12 @@ section h2::after {
     height: auto;
     margin-right: 0;   
     margin-left: 170px;
-    border-radius: 10px; 
 
 }
 #About .bingkai img {
     width: 100%;
     height: 100%;
-    /* border: 1px solid rgb(0, 0, 0,0.2); */
-    border-radius: 10px; 
-    box-shadow: 0 0px 15px rgba(1 1 1 / 80%);
+    box-shadow: 0 0px 20px rgba(1 1 1 / 50%);
 }
 #About .teks-about {
     width: 49%;
@@ -395,14 +392,17 @@ text-align: center;
 #Blogs .cards .writer {
     font-style: italic;
     font-size: 14px;
-    color: #555;
+    color: #444;
+}
+#Blogs .cards .writer small {
+    font-size: 10px;
+    margin-left: 5px;
 }
 
 
 #Blogs .cards input[name="buttonArticle"]{
     background: transparent;
-    padding: 0 10px;
-    margin-bottom: 5px;
+    margin: 5px 10px;
     border: none;
     color: #DA0037;
     font-weight: 700;
@@ -471,7 +471,7 @@ text-align: center;
 /* contact */
 #Contact {
     padding: 10vh 0;
-    background-color: #444;
+    background-color: #333;
 }
 #Contact .container {
     box-sizing: border-box;
@@ -591,10 +591,13 @@ footer small {
         display: block;
     }
     .openMenu i {
-        font-size: 25px;
+        font-size: 30px;
         
     }
     /* .banners */
+    section.banners {
+        background-position: -480px 0 ;
+    }
     section.banners .container {
         margin: auto;
     }
@@ -602,7 +605,7 @@ footer small {
         font-size: 24px;
     }
     section.banners .banners-content .teks-2{
-        font-size: 30px;
+        font-size: 28px;
     }
     section.banners .banners-content .teks-3{
         font-size: 24px;
@@ -610,7 +613,6 @@ footer small {
     }
     section.banners .banners-content .teks-3 span{
         font-size: 24px;
-        font-weight: 400;
     }
    
     /* About */
@@ -623,7 +625,7 @@ footer small {
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        margin-top: 20px;
+        margin:  20px 0;
     }
     #About .bingkai {
         width: 80%;
@@ -635,6 +637,7 @@ footer small {
         margin: 0;
         width: 100%;
         align-items: center;
+        margin: 10px 0;
     }
     #About .teks-about p {
         text-align: justify;
@@ -667,7 +670,7 @@ footer small {
         width: 90%;
         margin: auto;
         height: auto;
-        margin-bottom: 13px;
+        margin-bottom: 20px;
     }
   
 
@@ -680,7 +683,8 @@ footer small {
         height: auto;
     }
     #Galery .container .gambar .thumb{
-        width: 50%;
+        width: 49%;
+        margin-bottom: 5px;
     }
 
     /* contact */
