--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ section.banners .banners-content .teks-3 span{
     font-weight: 500;
     color: #DA0037;
 }
-section.banners .banners-content form input[name="buttonCV"] {
+section.banners .banners-content input[name="buttonCV"] {
     padding: 8px 15px;
     border: 3px solid #DA0037;
     border-radius: 30px;
@@ -160,7 +160,7 @@ section.banners .banners-content form input[name="buttonCV"] {
     font-weight: 600;
     margin: 5px 0;
 }
-section.banners .banners-content form input[name="buttonCV"]:hover {
+section.banners .banners-content input[name="buttonCV"]:hover {
     background: #1F1D36;
     color: #DA0037;
     transition:.5s ease;
